# amm-gym

./: .context.md  .gitignore  README.md  calibration_final.json  project_description.md  pyproject.toml
amm_gym/: __init__.py  baselines.py  env.py
arena_eval/: __init__.py
arena_policies/: __init__.py  belief_state_controller.py  inventory_toxicity.py  latent_ladder.py  piecewise_controller.py  reactive_controller.py  submission_safe.py
arena_search/: __init__.py  diff_simple_amm_search.py  simple_amm_search.py
calibration_artifacts/: cycle_01.json  cycle_02.json  cycle_03.json  cycle_04.json  cycle_05.json  cycle_06.json  cycle_07_de_fast.json  cycle_08.json  pool_flow_splits.csv
demo/: __init__.py  common.py  depth_ladder_demo.py  episode_animation.py  exact_replica_animation.py  presets.py  run_policy_benchmark.py  strategy_flexibility_demo.py
docs/: demo_guide.md  env_training_contract.md  getting_started.md  project_plan.md  simple_amm_math_primer.md  training_quickstart.md
plans/: gym-wrapper-plan.md
plots/: backprop_training_curve.json  nn_overfit_stepA.json  nn_overfit_stepB.json  nn_overfit_stepC1.json  nn_overfit_stepC2a_seed1.json  nn_overfit_stepC2a_seed2.json  nn_overfit_stepD.json  nn_overfit_stepE1.json  nn_overfit_stepE2.json
prediction_market/: probe_analysis.md  v2_strategy.py
presentation/: arb_lab.py  arb_only_lvr_lab.ipynb  backprop_env.ipynb  backprop_helpers.py  calibration_2d_results.json  calibration_explainer.html  calibration_helpers.py  calibration_three_targets.ipynb  helpers.py  nn_overfit_challenge.py  realistic_simulator.ipynb  run_calibration_2d.py
reports/: 5bp_markout_investigation.md  calibration_v2_validation.md  calibration_v2_validation_pool_mid.md  impact_curve_fit.md  impact_curve_fit_pool_mid.md  markout_by_size_bucket_30d.csv  markout_daily_5bp_pool.csv  markout_windows.csv  (+2 more)
(+203 files in other folders)
