[project]
name = "amm-gym"
version = "0.1.0"
description = "Gymnasium environment for RL-based AMM liquidity placement"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
demo = [
    "matplotlib>=3.8",
]
rl = [
    "torch>=2.0",
]
diff = [
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["amm_gym*", "arena_eval*", "arena_policies*", "arena_search*", "demo*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
